src/test/deca/context/valid/thibault/optimisation/testOpt7.deca
{
	int a, b, c, d, e;
	a=2+5;
	b=a;
	print("Des calculs");
	c=2+3+6+5+4+5+5*5-6;
}
