src/test/deca/context/invalid/pierre/incomp.deca
{
    int a = 1 ;
    float b = 1 ;
    if (a == b) {
        println("NOK");
    }
}